<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Fruits">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/textLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_Apples"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_Bananas"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/textView_Pineapples"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_Strawberries"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_Watermelons"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_Limes"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_Lemons"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_JavaPlums"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_Mangos"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_Nectarines"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_Oranges"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="23dp"
                    android:text="@string/textView_Pears"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/price_Layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_ApplesPrice"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_BananasPrice"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/textView_PineapplesPrice"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_StrawberriesPrice"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_WatermelonsPrice"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_LimesPrice"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_LemonsPrice"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_JavaPlumsPrice"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_MangosPrice"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_NectarinesPrice"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/textView_OrangesPrice"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:text="@string/textView_PearsPrice"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/checkbox_Layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkbox_Apples"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:onClick="errorFix" />

                <CheckBox
                    android:id="@+id/checkbox_Bananas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:onClick="errorFix" />

                <CheckBox
                    android:id="@+id/checkbox_Pineapples"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:onClick="errorFix" />

                <CheckBox
                    android:id="@+id/checkbox_Strawberries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="errorFix" />

                <CheckBox
                    android:id="@+id/checkbox_Watermelons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="errorFix" />

                <CheckBox
                    android:id="@+id/checkbox_Limes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:onClick="errorFix" />

                <CheckBox
                    android:id="@+id/checkbox_Lemons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:onClick="errorFix" />

                <CheckBox
                    android:id="@+id/checkbox_JavaPlums"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:onClick="errorFix" />

                <CheckBox
                    android:id="@+id/checkbox_Mangos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:onClick="errorFix" />

                <CheckBox
                    android:id="@+id/checkbox_Nectarines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:onClick="errorFix" />

                <CheckBox
                    android:id="@+id/checkbox_Oranges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:onClick="errorFix" />

                <CheckBox
                    android:id="@+id/checkbox_Pears"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="errorFix" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/images_Layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/apple" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/banana1" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="43dp"
                    android:background="@drawable/pineapple" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/strawberry" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="47dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/watermellon" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/citrus_limes_hero" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/lemon" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/plum" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/mango" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="38dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/nectarine" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/oranges" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/pear" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_PreviousMenu"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:onClick="errorFix"
                android:padding="10dp"
                android:text="@string/buttonText_previous"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_NextMenu"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="70dp"
                android:onClick="errorFix"
                android:padding="10dp"
                android:text="@string/buttonText_NextStep"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>