<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <LinearLayout
        android:id="@+id/linearLayout_Admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--        TextView ID-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="ID:"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:text="12"
            android:textSize="24sp" />


        <!--        TextView Username-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/textView_Username"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView_Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:text="parvanovski347"
            android:textSize="24sp" />


        <!--        TextView Password-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:text="@string/textView_Password"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:text="pass123"
            android:textSize="24sp" />


        <!--        TextView Address-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/textView_Address"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView_Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:text="Horodnytsya, Zhytomyr Oblast, Украйна, 11714"
            android:textSize="24sp" />


        <!--        TextView City/Town/Address-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/textView_City_Town_Village"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView_PopulatedPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:text="Knezha"
            android:textSize="24sp" />


        <!--        TextView First Name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="First Name:"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView_FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:text="Sasho"
            android:textSize="24sp" />


        <!--        TextView Last Name-->
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="Last Name:"
        android:textColor="@color/black"
        android:textSize="25sp" />

        <TextView
            android:id="@+id/textView_LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:text="Dimitrov"
            android:textSize="24sp" />


<!--        TextView Age-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/textView_Age"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView_Age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="60dp"
            android:text="15"
            android:textSize="24sp" />
    </LinearLayout>


</RelativeLayout>